--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,15 @@
   </head>
 
   <body ng-app="havaschedule">
+    <ion-nav-bar class="bar bar-header bar-stable has-tabs-top">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
+    </ion-nav-bar>
+    <!--
+      The views will be rendered in the <ion-nav-view> directive below
+      Templates are in the /templates folder (but you could also
+      have templates inline in this html file if you'd like).
+    -->
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
