--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
+    <script src="js/models.js"></script>
   </head>
 
   <body ng-app="havaschedule">
